<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_recipes_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/recipes_header"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/list_recipes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/text_recipes_header"
        android:layout_marginTop="8dp"
        android:divider="@color/transparent"
        android:dividerHeight="8dp"
        android:padding="16dp" />

    <TextView
        android:id="@+id/text_empty_recipes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/label_empty_recipes"
        android:textSize="18sp"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/content_add_recipe"
        android:src="@drawable/ic_add"
        android:tint="@color/black" />

</RelativeLayout>